# EverythingLibraryBackend

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7483f829753e_first_migration.py  7a9b0f0a14c4_a2.py  c55560b36e6d_second_migration.py
app/: main.py
app/core/: crud.py  database.py  env_loader.py  models.py
app/tools/: __init__.py  models.py  schema.py
app/tools/association/: crud.py  router.py
app/tools/item/: crud.py  router.py
app/tools/tag/: crud.py  router.py
app/tools/user/: crud.py  router.py
kinoBE/: main.py
kinoBE/core/: database.py  models.py  schema.py
kinoBE/tools/: models.py  schema.py
kinoBE/tools/association/: crud.py  router.py
kinoBE/tools/item/: crud.py  router.py
kinoBE/tools/tag/: crud.py  router.py
kinoBE/tools/user/: crud.py  router.py
